# DREAM-SIM

./: LICENSE  README.md  pyproject.toml
conda/: environment.yaml
notebook/: av2.ipynb  model.ipynb
src/config/: default_train.yaml
src/config/callbacks/: default.yaml
src/config/data/: av2.yaml
src/config/experiment/senevam/: av2_r_50.yaml
src/config/hydra/: default.yaml
src/config/model/: senevam.yaml
src/config/paths/: default.yaml
src/config/trainer/: default.yaml
src/planner/: __init__.py  type.py
src/planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/planner/data/: __init__.py  viz.py
src/planner/data/components/: av2_factories.py
src/planner/model/: senevam.py
src/planner/model/components/: constraint_models.py  constraints_loss.py  policy.py  tokenizer.py
src/planner/model/function/: __init__.py  mask.py
src/planner/model/module/: layers.py  positional.py  rst.py
src/planner/utils/: tools.py
